add density counting and train on Detrac

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 .idea
+__pycache__
+*/__pycache__
+*/*/__pycache__
+*/*/*/__pycache__
+*/*/*/*/__pycache__
+*/*/*/*/*/__pycache__
+*/*/*/*/*/*/__pycache__
+*.pyc
+exp/mot/
+src/lib/models/networks/config/__pycache__/default.cpython-37.pyc
+src/lib/models/networks/config/__pycache__/__init__.cpython-37.pyc
+src/lib/models/networks/__pycache__/resnet_fpn_dcn.cpython-37.pyc
+src/lib/models/networks/__pycache__/resnet_dcn.cpython-37.pyc
+src/lib/models/networks/__pycache__/pose_hrnet.cpython-37.pyc
+src/lib/models/networks/__pycache__/pose_dla_dcn.cpython-37.pyc
+src/lib/models/networks/__pycache__/pose_dla_conv.cpython-37.pyc
+src/lib/models/networks/__pycache__/dlav0.cpython-37.pyc
+src/lib/datasets/dataset/__pycache__/jde.cpython-37.pyc
